package zhangzhishuo;

public record FileVO(String url, String originalName, long size) {
}
